syntax = "proto3";

package project.planton.provider.civo.civocomputeinstance.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/civo/civocomputeinstance/v1/spec.proto";
import "project/planton/provider/civo/civocomputeinstance/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// civo-compute-instance
message CivoComputeInstance {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'civo.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CivoComputeInstance'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CivoComputeInstanceSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CivoComputeInstanceStatus status = 5;
}

// civo-compute-instance status
message CivoComputeInstanceStatus {
  //stack-outputs
  //  civo-compute-instance stack-outputs
  CivoComputeInstanceStackOutputs outputs = 1;
}
