syntax = "proto3";

package project.planton.shared;

import "google/protobuf/timestamp.proto";

// ResourceAudit represents auditing information for a resource,
// containing both specification-level and status-level audit details.
message ApiResourceAudit {
  // spec_audit holds the auditing information related to the resource's desired state or specification.
  ApiResourceAuditInfo spec_audit = 1;

  // status_audit holds the auditing information related to the resource's status.
  ApiResourceAuditInfo status_audit = 2;
}

// Audit represents the system-level auditing information for an object.
// This includes details about the creation and last update of the object,
// as well as the type of the last event associated with the object.
message ApiResourceAuditInfo {
  // created_by is the identifier of the user or system process that created the object.
  ApiResourceAuditActor created_by = 1;

  // created_at is the timestamp indicating when the object was created.
  google.protobuf.Timestamp created_at = 2;

  // updated_by is the identifier of the user or system process that last updated the object.
  ApiResourceAuditActor updated_by = 3;

  // updated_at is the timestamp indicating when the object was last updated.
  google.protobuf.Timestamp updated_at = 4;

  // event_type is the type of the last event associated with the object.
  // This is typically a string code representing specific events in the system.
  string event = 5;
}

// actor in the audit
message ApiResourceAuditActor {
  //id of the actor
  string id = 1;
  //avatar url of the actor
  string avatar = 2;
}

// api-resource status containing just audit message.
message ApiResourceAuditStatus {
  //audit info
  ApiResourceAudit audit = 99;
}
